[project]
name = "host-llm-on-gpu-server"
version = "0.1.0"
description = "Rent a GPU server on vast.ai and host an Ollama model, reachable from local."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
